--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,12 @@ buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
+.idea/.gitignore
+.idea/compiler.xml
+.idea/cv-mac-spring-boot-starter.iml
+.idea/encodings.xml
+.idea/jarRepositories.xml
+.idea/libraries/
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
